--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us | CASUAL</title>
+    <link rel="stylesheet" href="build/index.css">
 </head>
-<body>
-    <div>
-        <h1>Hello</h1>
+<body class="pageGrid">
+    <button class="nav-button">
+        <span class="sr-only">MENU</span>
+    </button>
+
+    <ul class="sns">
+        <li><a href="#"><img src="img/logo-twitter.svg" alt="Twitter"></a></li>
+        <li><a href="#"><img src="img/logo-facebook.svg" alt="Facebook"></a></li>
+        <li><a href="#"><img src="img/logo-instagram.svg" alt="Instagram"></a></li>
+    </ul>
+
+    <div class="decor">
+        Enjoy Active Outdoor Camping
     </div>
+
+    <footer class="footer">
+        CASUAL
+    </footer>
+    
 </body>
 </html>
