--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
         Enjoy Active Outdoor Camping
     </div>
 
-    <footer class="footer">
-        CASUAL
+    <footer class="footer partsGrid">
+        <div class="site">CASUAL</div>
+        <address>Carrot Hill 68 Str.<br>
+        15342 Ground Town, North Island<br>
+        +12-779887768
+        </address>
+        <div class="chat">
+            <a href="#">
+                <img src="img/chat.svg" alt=""><br>
+                Chat Support
+            </a>
+        </div>
     </footer>
     
 </body>
