--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 the popularity of camping-themed
                 YouTube videos. It's casual and
                 enjoyable.</p>
+
+        <div class="gallery">
+            <figure class="photoA"><img src="img/camp-food.jpg" alt=""></figure>
+            <figure class="photoB"><img src="img/camp-sky.jpg" alt=""></figure>
+            <figure class="photoC"><img src="img/camp-fire.jpg" alt=""></figure>
+            <figure class="photoD"><img src="img/camp-table.jpg" alt=""></figure>
+        </div>
+
             <p>Camping for the entire family
                 and the close group is exciting,
                 and also, solo camping is a fun
