--- a/index.html
+++ b/index.html
@@ -12,51 +12,11 @@
 </head>
 <body class="pageGrid">
     <main>
-        <div class="heading partsGrid">
-            <div class="site">CASUAL</div>
-            <figure>
-                <img src="img/tent-orange.jpg" alt="">
-            </figure>
+        <div class="hero partsGrid">
+            <h1>CASUAL</h1>
+            <p>Outdoor Camping since 2001</p>
+            <figure><img src="img/tent.jpg" alt=""></figure>
         </div>
-
-        <article class="article partsGrid">
-            <h1>About Us</h1>
-            <p>CASUAL is a small but naturerich
-                campsite that opened in 2001.
-                We provide unique information as
-                an outdoor media and portal to make
-                the outdoors more familiar and
-                accessible.</p>
-            <p>p>A while ago, camping was an
-                extraordinary thing. But recently,
-                it has become very familiar with
-                the popularity of camping-themed
-                YouTube videos. It's casual and
-                enjoyable.</p>
-
-        <div class="gallery">
-            <figure class="photoA"><img src="img/camp-food.jpg" alt=""></figure>
-            <figure class="photoB"><img src="img/camp-sky.jpg" alt=""></figure>
-            <figure class="photoC"><img src="img/camp-fire.jpg" alt=""></figure>
-            <figure class="photoD"><img src="img/camp-table.jpg" alt=""></figure>
-        </div>
-
-            <p>Camping for the entire family
-                and the close group is exciting,
-                and also, solo camping is a fun
-                way to enjoy. The evolutions
-                around the outdoors, such as easygoing
-                campsites, lightweight and
-                functional tools, and easy setup
-                tents, will help you dive into
-                nature.</p>
-            <p>Glamping is also your option.
-                It's a luxury and glamorous camping
-                style with comfortable amenities,
-                full-size beds, sofa, dining set,
-                meals, coffee maker, staging, etc.
-                Find a style that suits you.</p>
-        </article>
     </main>
 
     <button class="nav-button">
