--- a/index.html
+++ b/index.html
@@ -18,6 +18,34 @@
             <figure><img src="img/tent.jpg" alt=""></figure>
         </div>
     </main>
+    <div class="msg msgBlack partsGrid">
+        <figure>
+            <img src="img/tent-green.jpg" alt="">
+        </figure>
+        <div class="text">
+            <h2>Start the Adventure</h2>
+            <h3 class="text-subtitle">Let's Go Outside</h3>
+            <p class="text-body">Ready for adventure? You can leave all to us, enjoy your own
+                packed, or visit sites worldwide with minimal baggage. There are many styles of
+                enjoyment to be had there. Reflect on your favorite one in your adventure!
+                <p class="text-link"><a href="article.html">More &gt;&gt;&gt;</a></p>
+            </p>
+
+        </div>
+    </div>
+    <div class="msg msgWhite partsGrid">
+        <figure>
+            <img src="img/fire.jpg" alt="">
+        </figure>
+        <div class="text">
+            <h2>Casual Experience</h2>
+            <h3 class="text-subtitle">Just Around the Corner</h3>
+            <p class="text-body">body">The choice of sites and fields continues to grow every year,
+                and everything you need to enjoy the outdoor is there. Professional guides will
+                assist you as required, so experience a variety of things.</p>
+                <p class="text-link"><a href="article.html">More &gt;&gt;&gt;</a></p>
+        </div>
+    </div>
 
     <button class="nav-button">
         <span class="sr-only">MENU</span>
