--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="text">
             <h2>Casual Experience</h2>
             <h3 class="text-subtitle">Just Around the Corner</h3>
-            <p class="text-body">body">The choice of sites and fields continues to grow every year,
+            <p class="text-body">The choice of sites and fields continues to grow every year,
                 and everything you need to enjoy the outdoor is there. Professional guides will
                 assist you as required, so experience a variety of things.</p>
                 <p class="text-link"><a href="article.html">More &gt;&gt;&gt;</a></p>
