mobile layout fixed

--- a/article.html
+++ b/article.html
@@ -12,7 +12,7 @@
 </head>
 <body class="pageGrid">
     <main>
-        <div class="heading partsGrid">
+        <div class="headimg partsGrid">
             <div class="site">CASUAL</div>
             <figure>
                 <img src="img/tent-orange.jpg" alt="">
@@ -27,7 +27,7 @@
                 an outdoor media and portal to make
                 the outdoors more familiar and
                 accessible.</p>
-            <p>p>A while ago, camping was an
+            <p>A while ago, camping was an
                 extraordinary thing. But recently,
                 it has become very familiar with
                 the popularity of camping-themed
