--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja" class>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,9 +48,17 @@
         </div>
     </main>
 
-    <button class="nav-button">
+    <button class="nav-button" onclick="navFunc()">
         <span class="sr-only">MENU</span>
     </button>
+
+    <nav class="nav">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="article.html">ABOUT</a></li>
+            <li><a href="#">CONTACT US</a></li>
+        </ul>
+    </nav>
 
     <ul class="sns">
         <li><a href="#"><img src="img/logo-twitter.svg" alt="Twitter"></a></li>
@@ -75,6 +83,12 @@
             </a>
         </div>
     </footer>
+
+    <script>
+        function navFunc() {
+            document.querySelector('html').classList.toggle('open')
+        }
+    </script>
     
 </body>
 </html>
